--- a/maain.html
+++ b/maain.html
@@ -14,7 +14,7 @@
 <h2>شیمی مواد غذایی</h2>
 <h2>فناوری مواد غذایی</h2>
 <h2>زیست فناوری مواد غذایی</h2>
-<h3> راز موفقیت دانشجو این رشته در دست یابی به فراورده های جدید و عرضه آن به بازار و قابلیت توافق و سازش سازی بipppا تقاضای مشتریان است</h3>
+<h3> راز موفقیت دانشجو این رشته در دست یابی به فراورده های جدید و عرضه آن به بازار و قابلیت توافق و سازش سازی  تقاضای مشتریان است</h3>
 <hr>
 <p>dar inja kalameye <i>man</i> movarab mishavad kalameye <em>to</em> takiid mishvd va az nazare seo ba tag i fargh dard</p>
 dar inja roye kalameye <del>govahiname</del> khat keshidim. dar inja kalameye <b>kar</b> bold kardim<br> tag <strong>strong</strong> mesle tag b hast ba in tafavot ke fargh seo ii dard</p>
@@ -22,6 +22,8 @@ dar inja roye kalameye <del>govahiname</del> khat keshidim. dar inja kalameye <b
     html
 </abbr>
 <br>
-<span style="background-color: yellow;">ین جمله رنگی است </span>
+<span style="background-color: yellow;">این جمله رنگی است </span>
+<p>4 <sup>2</sup>+8<sup>2</sup>=80</p>
+<p>h<sub>2</sub>o</p>
 </body>
 </html>
